addons/rose/addon/styles/rose/components/form/_radio-card.scss
@use '../../variables/sizing';
@use '../../utilities/type';
@use '../../variables/typography';

$size-xxl: sizing.rems(xxl); //48
$size-xl: sizing.rems(xl); //36
$size-l: sizing.rems(l); // 24
$size-m: sizing.rems(m); // 16
$size-s: sizing.rems(s); //12
$size-xs: sizing.rems(xs); // 8
$size-xxs: sizing.rems(xxs); // 4
$size-xxxs: sizing.rems(xxxs); // 2
$size-xxxxs: sizing.rems(xxxxs); // 1

$radio-svg: (
  'default':
    "<svg viewBox='0 0 24 24' fill='%23aaaaaa' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z' /></svg>",
  'hover':
    "<svg viewBox='0 0 24 24' fill='%236f7682' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z' /></svg>",
  'focus':
    "<svg viewBox='0 0 24 24' fill='%231563ff' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z' /></svg>",
  'checked':
    "<svg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z' fill='%231563ff'/></svg>",
  'disabled':
    "<svg viewBox='0 0 24 24' fill='%23bac1cc' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z' /></svg>",
  'disabled-checked':
    "<svg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z' fill='%23bac1cc'/></svg>",
  'error':
    "<svg viewBox='0 0 24 24' fill='%23c73445' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z' /></svg>",
  'error-checked':
    "<svg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z' fill='%23c73445'/></svg>",
);

.rose-form-radio-card {
  $cardWideWidth: $size-m * 11;
  $cardTileWidth: $size-m * 7.25;
  $borderWidth: $size-xxxs * 2;

  &.wide {
    width: ($size-m) * 23;
    .rose-icon {
      --size: #{$size-m};
    }
  }

  &.tile {
    width: ($size-m) * 15;

    .rose-icon {
      --size: #{$size-xl - $size-xxs - $size-xxxs};
    }
    .rose-form-radio-label {
      display: flex;
      flex-direction: column;
      align-items: center;
      height: $size-m * 9;
      &::after {
        left: $cardTileWidth - $borderWidth;
      }
    }
  }
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;

  .radio-card-overlay {
    position: absolute;
    height: $size-l + $size-xxs;
    background-color: var(--ui-gray-subtler-5);
    width: 100%;
    bottom: 0;
    right: 0;
  }
  .rose-form-radio-label {
    @include type.type(s, bold);
    display: flex;
    color: var(--black);
    width: ($size-m) * 23;
    height: ($size-m) * 7.4;
    display: block;
    position: relative;
    text-align: left;
    word-break: break-all;
    border: $size-xxxxs solid var(--ui-gray-subtler-6);
    box-shadow: 0 $size-xxs $size-xxs
      rgba(var(--stark-components), var(--opacity-2));
    border-radius: $size-xxxs;
    padding: $size-s $size-m;
    box-sizing: border-box;
    background-color: var(--white);
    .rose-form-helper-text {
      @include type.type(xs, normal);
    }

    &::after {
      position: absolute;
      bottom: $size-xxs;
      right: $cardWideWidth - $borderWidth;
      display: block;
      width: $size-m;
      height: $size-m;
      transform: scale(2);
      pointer-events: none;
      content: ' ';
      background: no-repeat 50%/50% 50%;
      background-image: url($data-svg-prefix + map-get($radio-svg, 'default'));
    }
  }
  .rose-form-radio-field {
    position: absolute;
    z-index: 1;
    bottom: $size-xs;
    opacity: 0;

    &:not(:disabled) {
      &:focus {
        ~ .rose-form-radio-label {
          &::after {
            background-image: url($data-svg-prefix + map-get(
                $radio-svg,
                'focus'
              ));
          }
        }
      }
      &:hover {
        ~ .rose-form-radio-label {
          border: $size-xxxxs solid var(--ui-gray);
        }
      }
      &:checked {
        ~ .rose-form-radio-label {
          &::after {
            background-image: url($data-svg-prefix + map-get(
                $radio-svg,
                'checked'
              ));
          }
          .radio-card-overlay {
            background-color: var(--action-subtler-1h);
          }
          border: $size-xxxxs solid var(--info-subtler-1);
        }
      }
    }

    &:disabled {
      ~ .rose-form-radio-label {
        border: $size-xxxxs solid var(--ui-border-subtler-1);
        background-color: var(--ui-gray-subtler-6);
        color: var(--ui-gray-starker-1);
        &::after {
          background-image: url($data-svg-prefix + map-get(
              $radio-svg,
              'disabled'
            ));
        }
      }

      &:checked {
        ~ .rose-form-radio-label {
          &::after {
            background-image: url($data-svg-prefix + map-get(
                $radio-svg,
                'disabled-checked'
              ));
          }
        }
      }
    }
  }

  &.error {
    .rose-form-radio-field {
      &:not(:disabled):not(:focus) {
        &:not(:disabled):not(:focus) {
          ~ .rose-form-radio-label {
            &::after {
              background-image: url($data-svg-prefix + map-get(
                  $radio-svg,
                  'error'
                ));
            }
          }

          &:checked {
            ~ .rose-form-radio-label {
              &::after {
                background-image: url($data-svg-prefix + map-get(
                    $radio-svg,
                    'error-checked'
                  ));
              }
            }
          }
        }
      }
    }
  }
}

